<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_utils</name>
  <version>0.0.1</version>
  <description>
    Set of utilities to process pointclouds
  </description>

  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
</package>
